# argus

./: .env.example  .gitignore  README.md  adapter.py  app.py  argus_dashboard.py  assistant.py  cli.py  main.py  memory.py  modal_app.py  observability.py  pyproject.toml  risk_score.py
docs/: CODE_MAP.md  EVAL_STRATEGY.md  EXTENDING_ARGUS.md  HOW_IT_WORKS.md  SCORER_REFERENCE.md
evals/: prompts.py  report.py  results.jsonl  run.py  validation.py
examples/: audit_sample.py  custom_axis.py  guardrail_lift.py  kitchen_sink.py  legion_mode.py  multi_turn_audit.py  quickstart.py
pages/: observability.py
report/: build_pdf.py  eval_report.html  eval_report.md
results/: gpt_4o_mini.md  qwen_1_5b_modal.md  qwen_7b_openrouter.md  v1_vs_v2_comparison.md
src/argus/: __init__.py  adapter.py  assistant.py  axes.py  concurrency.py  conversation.py  datasets.py  eval_config.py  evaluator.py  observability.py  probes.py  risk_score.py  rubrics.py  tier_mapping.py  types.py
src/argus/guardrails/: __init__.py  embedding_guard.py  postflight.py  preflight.py
src/argus/providers/: __init__.py  base.py  guardrailed.py  http.py  huggingface.py  modal.py  openrouter.py
src/argus/scorers/: __init__.py  base.py  composite.py  exact_match_pii.py  hedge_phrase.py  key_facts.py  llama_guard.py  llama_prompt_guard.py  llm_judge.py  model_based.py  multi_judge.py  perspective.py  presidio.py  refusal_regex.py
src/argus/storage/: __init__.py  index.py  report.py  writer.py
src/argus/tools/: web_search.py
src/argus/transforms/: __init__.py  base.py  case_change.py  identity.py  multi_turn_escalation.py  paraphrase.py  persona_swap.py  translation_laundering.py  typos.py
tests/: test_backward_compat.py  test_smoke.py
