[project]
name = "argus"
version = "0.2.0-dev"
description = "Argus — pluggable AI vendor risk audit SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.0",
    "datasets>=4.0.0",
    "markdown>=3.10.2",
    "matplotlib>=3.10.9",
    "modal>=1.4.3",
    "python-dotenv>=1.2.2",
    "scrapegraph-py>=2.1.0",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["argus*"]
